# coinflip_smartcontract_rust

rust_ui/: Cargo.toml
rust_ui/src/: coinflip_abi.json  contract_queries.rs  main.rs
solidity_contract/artifacts/: CoinFlip.json  CoinFlip_metadata.json
solidity_contract/contracts/: coin_flip.sol
solidity_contract/migrations/: 1_coin_flip_migration.js
