[package]
name = "coin_flip"
version = "0.1.0"
edition = "2021"
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
tokio = { version = "1.15.0", features = ["full"] }
secp256k1 = "0.21.0"
tracing-subscriber = "0.3.17"
dialoguer = {version = "0.10.4", features = ["fuzzy-select"]}
